# pyaccounting

./: README.md  pyproject.toml
src/: pyaccounting.py
